syntax = "proto3";

package dunedaq.druncschema;

import "druncschema/token.proto";

enum ActionType {
  ACTION_UNSPECIFIED = 0;
  READ = 1;
  CREATE = 2;
  DELETE = 3;
};

enum SystemType {
  CONTROLLER = 0;
  PROCESS_MANAGER = 1;
};

message AuthoriserRequest {
  Token token = 1;
  ActionType action = 2;
  SystemType system = 3;
}